<resources>
    <string name="app_name">GarageApp</string>
    <string name="title_activity_garage">GarageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_menu_tittle">Home</string>
    <string name="action_favorite">Mark Favorite</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="fav_clicked">Fav menu item is clicked!</string>
    <string name="search_clicked">Search menu item is clicked!</string>
    <string name="settings_clicked">Settings item is clicked!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vehicles">Vehicles</string>
    <string name="order_service">Order service</string>
    <string name="settings">Settings</string>
    <string name="receiptLabel">Receipt</string>
    <string name="register">Register</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="booking_service_label">Booking Service</string>
    <string name="label_mileage">Mileage</string>
    <string name="vehicle_label">Vehicle</string>
    <string name="service_plan_label">Service plan</string>
    <string name="date_label">Date</string>
    <string name="checkout_label">Checkout</string>

    <string-array name="plans">
        <item>Annual service €200</item>
        <item>Major service €189</item>
        <item>Major repair €100</item>
        <item>Fault €55</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_message">Already a member? Login</string>
    <string name="vehicle_brand">Brand</string>
    <string name="vehicle_model">Model</string>
    <string name="save_vehicle_label">SAVE</string>
    <string name="register_member">register</string>
</resources>
