<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/app_bar_fav"
            android:icon="@drawable/baseline_delete_24"
            android:title="@string/action_favorite"
            app:iconTint="@android:color/white"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/app_bar_search"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/action_search"
            app:iconTint="@android:color/white"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/app_bar_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/baseline_more_vert_24"
            app:iconTint="@android:color/white"
            app:showAsAction="never"/>
    <!--tools:ignore="AppCompatResource" />-->

</menu>
