<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".features.book.BookDetailFragment">


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bookDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bookDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bookServicePlanLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/service_plan_label"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/bookDateLayout">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/bookServicePlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bookVehicleLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_label"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/bookServicePlanLayout">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/bookVehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bookCheckoutBtn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:text="@string/checkout_label"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            app:layout_constraintTop_toBottomOf="@+id/bookVehicleLayout"
            app:layout_constraintStart_toStartOf="@+id/bookVehicleLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>